# pr2drag-lite

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/demo_tasks/: tier1_demo_tasks.jsonl
configs/: davis2016_cpu.yaml  davis2016_cpu__abstonly_r0p010.yaml  davis2016_cpu__abstonly_r0p050.yaml  davis2016_cpu__eg0p10.yaml  davis2016_cpu__eg0p20.yaml  davis2016_cpu__eg0p40.yaml  davis2016_cpu__eg0p50.yaml  davis2016_cpu__eg0p80.yaml  davis2016_cpu__eg0p90.yaml  davis2016_cpu__eg0p95.yaml  default.yaml  presets.yaml  tapvid_davis.yaml
configs/datasets/: tier0.yaml  tier1.yaml
configs/editors/: editor_a.yaml  editor_b.yaml
configs/exp/: E0_main_risk.yaml  E0b2.yaml  E0b3_soft_disp.yaml  E0b4_safe_bridge_speed.yaml  E0b_seg_on_risk0005.yaml  E0c_seg_on_no_wcalib_risk0005.yaml  E1_no_hmm.yaml  E1b_no_hmm_rscale.yaml  E1c_no_hmm_tau0p4.yaml  E2_no_calib.yaml  E2_w_ones.yaml  E3_no_seg_routing.yaml：  E3_relaxed_hermite.yaml  E3_safe_bridge_linear.yaml  E3_tau_quantile.yaml  E3a_no_seg_risk001.yaml  E3b_no_seg_risk0005.yaml  E3c_no_wcalib_risk001.yaml  E6_gate_hold.yaml  (+9 more)
pr2/: __init__.py
pr2drag/: __init__.py  aob.py  archive.py  cli.py  config.py  core.py  eval.py  evidence.py  pipeline.py  pipeline.py.bak_20251221_203540  sp.py  stage1.py  stage2_flow.py  stage3.py  tapvid_eval.py  tapvid_pred.py  utils.py
scripts/: 02_train_posterior.py  03_select_tau.py  05_run_q2_main.sh  06_run_stress.sh  07_run_q3_transfer.sh  08_aggregate_all.sh
tests/: test_aob.py
tools/: render_npz_to_mp4.py  render_tracks_video.py  run_stage3_sweeps.py  summarize_runs.py
(+66 files in other folders)
