[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pr2drag-lite"
version = "0.1.0"
description = "PR2-Drag DAVIS2016 CPU pipeline (lite, structured)"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["pr2drag*"]
